@@ -36,6 +36,7 @@ struct http_io_conf {
     int                 debug_http;
     int                 quiet;
     int                 compress;
+    int                 vhost;                      // use virtual host style URL
     u_int               *nonzero_bitmap;            // is set to NULL by http_io_create()
     int                 insecure;
     u_int               block_size;
