@@ -520,6 +520,16 @@ See also
 .Fl \-maxRetryPause .
 .It Fl \-version
 Output version and exit.
+.It Fl \-vhost
+Use virtual hosted style requests.
+For example, this will cause
+.Nm
+to use the URL
+.Pa http://mybucket.s3.amazonaws.com/path/uri
+instead of 
+.Pa http://s3.amazonaws.com/mybucket/path/uri .
+.Pp
+This flag is required (for example) when S3 buckets have been created with location constraints.
 .El
 .Pp
 In addition,
